[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/ConfigControlsMenu/ControlConfigMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/ConfigControlsMenu/BaseControlConfigButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/ReturnShortcut.tres" type="ShortCut" id=3]
[ext_resource path="res://Menu/MenuPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/ConfigControlsMenu/Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/ConfigControlsMenu/MenuSeparator.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/ButtonsAndOptions/ButtonModel.tscn" type="PackedScene" id=7]

[node name="ControlConfigMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
button_model = ExtResource( 2 )
return_shortcut = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 364.0
margin_top = 224.0
margin_right = 660.0
margin_bottom = 376.0

[node name="MenuPanel" parent="CenterContainer/MarginContainer" instance=ExtResource( 4 )]
margin_right = 296.0
margin_bottom = 152.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
margin_right = 296.0
margin_bottom = 152.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 284.0
margin_bottom = 140.0

[node name="Map" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 272.0

[node name="OtherButtons" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 272.0
margin_bottom = 128.0

[node name="Box" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 5 )]
margin_right = 272.0
alignment = 0

[node name="HSeparator" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 6 )]
margin_right = 272.0

[node name="HSeparator2" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 6 )]
margin_top = 34.0
margin_right = 272.0
margin_bottom = 38.0

[node name="HSeparator3" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 6 )]
margin_top = 42.0
margin_right = 272.0
margin_bottom = 46.0

[node name="Model" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 7 )]
margin_left = 130.0
margin_top = 50.0
margin_right = 142.0
margin_bottom = 72.0
focus_neighbour_bottom = NodePath("../Change")

[node name="Change" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 7 )]
margin_left = 74.0
margin_top = 76.0
margin_right = 198.0
margin_bottom = 98.0
focus_neighbour_bottom = NodePath("../Return")
text = "Change "

[node name="Return" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 7 )]
margin_left = 82.0
margin_top = 102.0
margin_right = 190.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../Change")
shortcut = ExtResource( 3 )
text = "Return"
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons/Model" to="." method="_on_Model_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons/Change" to="." method="_on_Change_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/OtherButtons/Return" to="." method="_on_Return_pressed"]
